--- a/estilo-servicios.css
+++ b/estilo-servicios.css
@@ -79,7 +79,7 @@ color: white;
     padding: 50px;
     position: absolute;
     font-family: Arial;
-    text-align: justify;
+    text-align: center;
 }
 
 .numbertext {
