--- a/estilo.css
+++ b/estilo.css
@@ -39,22 +39,19 @@ color: white;
 table {
     border-collapse: collapse;
     width: 100%;
+    text-align: center;
     font-family: Arial, sans-serif;
 }
   
 th, td {
-    border: 1px solid #818181;
-    text-align: left;
+    border: 1px solid #616161;
     padding: 8px;
 }
   
+
 th {
     background-color: #9c9c9c;
     font-weight: bold;
-}
-  
-tr:nth-child(even) {
-    background-color: #f2f2f2;
 }
 
 /*Botones*/
@@ -73,11 +70,11 @@ tr:nth-child(even) {
 div.column {
     float: left;
     width: 10%;
-    padding: 5px;
 }
 
-div.fila::after {
-    content: "";
+div.fila {
     clear: both;
     display: table;
+    margin-left: auto;
+    margin-right: auto;
 }
