--- a/estilo-servicios.css
+++ b/estilo-servicios.css
@@ -8,6 +8,11 @@ body {
     background: #F1CC6E;
 }
 
+p.panels.gas.luz {
+  margin: 10px;
+  width: 500px;
+}
+
 .topnav a {
 float: left;
 color: #f2f2f2;
@@ -76,8 +81,8 @@ color: white;
 
 .texts {
     font-size: 18px;
-    padding: 50px;
-    position: absolute;
+    width: 800px;
+    margin: 0 0 0 550px; /*Arriba, der, abajo, izq */
     font-family: Arial;
     text-align: center;
 }
